hphp/hack/test/typecheck/collection_missing_arrow_legacy.php
<?hh

function test(): void {
  // Missing arrow in a key-value collection (Map)
  $x = Map {'just_value'};
}
